--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="hero-info">
               <h2>Miles into</h2>
               <h1>Memories</h1>
-              <h3>AJ Tours & Travels</h3>
+              <h3>Arul Jothi Tours & Travels</h3>
             </div>
             <div class="hero-image hi-1"></div>
           </article>
@@ -77,7 +77,7 @@
             <div class="hero-info">
               <h2>Driving your </h2>
               <h1>Desires</h1>
-              <h3>AJ Tours & Travels</h3>
+              <h3>Arul Jothi Tours & Travels</h3>
             </div>
             <div class="hero-image hi-2"></div>
           </article>
@@ -86,7 +86,7 @@
             <div class="hero-info">
               <h2>Tailored for</h2>
               <h1>Travellers</h1>
-              <h3>AJ Tours & Travels</h3>
+              <h3>Arul Jothi Tours & Travels</h3>
             </div>
             <div class="hero-image hi-3"></div>
           </article>
@@ -95,7 +95,7 @@
             <div class="hero-info">
               <h2>Travel in</h2>
               <h1>Style</h1>
-              <h3>AJ Tours & Travels</h3>
+              <h3>Arul Jothi Tours & Travels</h3>
             </div>
             <div class="hero-image hi-4"></div>
           </article>
@@ -104,7 +104,7 @@
             <div class="hero-info">
               <h2>Elevate Your</h2>
               <h1>Adventure</h1>
-              <h3>AJ Tours & Travels</h3>
+              <h3>Arul Jothi Tours & Travels</h3>
             </div>
             <div class="hero-image hi-5"></div>
           </article>
@@ -525,17 +525,17 @@
         delay: 400,
       });
 
-      ScrollReveal().reveal(".main-title,.section-title", { delay: 500, origin: "left" });
-      ScrollReveal().reveal(".sec-01 .image,.info", { delay: 600, origin: "bottom" });
-      ScrollReveal().reveal(".text-box", { delay: 700, origin: "right" });
-      ScrollReveal().reveal(".reviews", { delay: 800, origin: "right" });
+      ScrollReveal().reveal(".main-title,.section-title", { delay: 300, origin: "left" });
+      ScrollReveal().reveal(".sec-01 .image,.info", { delay: 400, origin: "bottom" });
+      ScrollReveal().reveal(".text-box", { delay: 500, origin: "right" });
+      ScrollReveal().reveal(".reviews", { delay: 600, origin: "right" });
       ScrollReveal().reveal(".contact_title", { delay: 100, origin: "left" });
       ScrollReveal().reveal(".contact_para", { delay: 100, origin: "left" });
       ScrollReveal().reveal("#contact1", { delay: 300, origin: "bottom" });
       ScrollReveal().reveal("#contact2", { delay: 400, origin: "bottom" });
       ScrollReveal().reveal("#contact3", { delay: 500, origin: "bottom" });
-      ScrollReveal().reveal(".sec-02 .image,.sec-03 .image", { delay: 500, origin: "top" });
-      ScrollReveal().reveal(".media-info li", { delay: 500, origin: "left", interval:200 });
+      ScrollReveal().reveal(".sec-02 .image,.sec-03 .image", { delay: 300, origin: "top" });
+      ScrollReveal().reveal(".media-info li", { delay: 400, origin: "left", interval:200 });
       ScrollReveal().reveal(".flower_grid_holder", { delay: 300, origin: "bottom" });
     </script>
     <script src="https://unpkg.co/gsap@3/dist/gsap.min.js"></script>
